[package]
name = "np_test"
version = "0.1.0"
authors = ["devfans <stefanliu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"
nalgebra = "0.19"
ncollide3d = "0.21"
nphysics3d = "0.13"
nphysics_testbed3d = "*"
rand = "*"
